<resources>
    <string name="app_name">Android Java Calculator</string>
    <string name="zero">0</string>
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="six">6</string>
    <string name="seven">7</string>
    <string name="eight">8</string>
    <string name="nine">9</string>
    <string name="plus">+</string>
    <string name="minus">-</string>
    <string name="divide">/</string>
    <string name="multiply">*</string>
    <string name="equals">=</string>
    <string name="clear">CLEAR</string>
    <string name="calculatorText">NaN</string>
    <string name="dot">.</string>
    <string name="nav_aboutApp">About App</string>
    <string name="nav_open">Open</string>
    <string name="nav_close">Close</string>
    <string name="aboutAppMessage">Made by JustNU using Android Studio for St. Petersburg Technological College</string>
</resources>