<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    tools:ignore="ButtonStyle,DuplicateSpeakableTextCheck">

    <androidx.drawerlayout.widget.DrawerLayout
        android:id="@+id/drawer_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:openDrawer="start">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/calculatorText"
                android:layout_width="355dp"
                android:layout_height="wrap_content"
                android:layout_column="4"
                android:layout_weight="0"
                android:backgroundTintMode="add"
                android:text="@string/calculatorText"
                android:textAlignment="textEnd"
                android:textSize="34sp"
                app:layout_constraintBottom_toTopOf="@+id/tableLayout"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

            <TableLayout
                android:id="@+id/tableLayout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent">

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <Button
                        android:id="@+id/button_7"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:backgroundTint="@color/buttonNumber"
                        android:insetLeft="4dp"
                        android:insetRight="4dp"
                        android:padding="0dp"
                        android:text="@string/seven"
                        android:textColor="@color/white"
                        android:textSize="20sp" />

                    <Button
                        android:id="@+id/button_8"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:backgroundTint="@color/buttonNumber"
                        android:insetLeft="4dp"
                        android:insetRight="4dp"
                        android:padding="0dp"
                        android:text="@string/eight"
                        android:textColor="@color/white"
                        android:textSize="20sp" />

                    <Button
                        android:id="@+id/button_9"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:backgroundTint="@color/buttonNumber"
                        android:insetLeft="4dp"
                        android:insetRight="4dp"
                        android:padding="0dp"
                        android:text="@string/nine"
                        android:textColor="@color/white"
                        android:textSize="20sp" />

                    <Button
                        android:id="@+id/button_clear"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:backgroundTint="@color/buttonClear"
                        android:insetLeft="4dp"
                        android:insetRight="4dp"
                        android:padding="0dp"
                        android:text="@string/clear"
                        android:textColor="@color/white"
                        android:textSize="20sp" />
                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <Button
                        android:id="@+id/button_4"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:backgroundTint="@color/buttonNumber"
                        android:insetLeft="4dp"
                        android:insetRight="4dp"
                        android:padding="0dp"
                        android:text="@string/four"
                        android:textColor="@color/white"
                        android:textSize="20sp" />

                    <Button
                        android:id="@+id/button_5"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:backgroundTint="@color/buttonNumber"
                        android:insetLeft="4dp"
                        android:insetRight="4dp"
                        android:padding="0dp"
                        android:text="@string/five"
                        android:textColor="@color/white"
                        android:textSize="20sp" />

                    <Button
                        android:id="@+id/button_6"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:backgroundTint="@color/buttonNumber"
                        android:insetLeft="4dp"
                        android:insetRight="4dp"
                        android:padding="0dp"
                        android:text="@string/six"
                        android:textColor="@color/white"
                        android:textSize="20sp" />

                    <Button
                        android:id="@+id/button_divide"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:backgroundTint="@color/buttonOperators"
                        android:insetLeft="4dp"
                        android:insetRight="4dp"
                        android:padding="0dp"
                        android:text="@string/divide"
                        android:textColor="@color/white"
                        android:textSize="20sp" />
                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <Button
                        android:id="@+id/button_1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:backgroundTint="@color/buttonNumber"
                        android:insetLeft="4dp"
                        android:insetRight="4dp"
                        android:padding="0dp"
                        android:text="@string/one"
                        android:textColor="@color/white"
                        android:textSize="20sp" />

                    <Button
                        android:id="@+id/button_2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:backgroundTint="@color/buttonNumber"
                        android:insetLeft="4dp"
                        android:insetRight="4dp"
                        android:padding="0dp"
                        android:text="@string/two"
                        android:textColor="@color/white"
                        android:textSize="20sp" />

                    <Button
                        android:id="@+id/button_3"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:backgroundTint="@color/buttonNumber"
                        android:insetLeft="4dp"
                        android:insetRight="4dp"
                        android:padding="0dp"
                        android:text="@string/three"
                        android:textColor="@color/white"
                        android:textSize="20sp" />

                    <Button
                        android:id="@+id/button_multiply"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:backgroundTint="@color/buttonOperators"
                        android:insetLeft="4dp"
                        android:insetRight="4dp"
                        android:padding="0dp"
                        android:text="@string/multiply"
                        android:textColor="@color/white"
                        android:textSize="20sp" />
                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <Button
                        android:id="@+id/button_plus"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:backgroundTint="@color/buttonOperators"
                        android:insetLeft="4dp"
                        android:insetRight="4dp"
                        android:padding="0dp"
                        android:text="@string/plus"
                        android:textColor="@color/white"
                        android:textSize="20sp" />

                    <Button
                        android:id="@+id/button_0"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:backgroundTint="@color/buttonNumber"
                        android:insetLeft="4dp"
                        android:insetRight="4dp"
                        android:padding="0dp"
                        android:text="@string/zero"
                        android:textColor="@color/white"
                        android:textSize="20sp"
                        tools:ignore="DuplicateSpeakableTextCheck" />

                    <Button
                        android:id="@+id/button_minus"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:backgroundTint="@color/buttonOperators"
                        android:insetLeft="4dp"
                        android:insetRight="4dp"
                        android:padding="0dp"
                        android:text="@string/minus"
                        android:textColor="@color/white"
                        android:textSize="20sp" />

                    <Button
                        android:id="@+id/button_dot"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:backgroundTint="@color/buttonOperators"
                        android:insetLeft="4dp"
                        android:insetRight="4dp"
                        android:padding="0dp"
                        android:text="@string/dot"
                        android:textColor="@color/white"
                        android:textSize="20sp" />
                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <Button
                        android:id="@+id/button_equals"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_column="3"
                        android:backgroundTint="@color/buttonEquals"
                        android:insetLeft="4dp"
                        android:insetRight="4dp"
                        android:padding="0dp"
                        android:text="@string/equals"
                        android:textColor="@color/white"
                        android:textSize="20sp"
                        tools:ignore="TextContrastCheck" />

                </TableRow>
            </TableLayout>
        </androidx.constraintlayout.widget.ConstraintLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            tools:layout_editor_absoluteY="40dp">

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="64dp"
                app:title="@string/app_name" />

        </LinearLayout>

        <com.google.android.material.navigation.NavigationView
            android:id="@+id/nav_view"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="start"
            app:headerLayout="@layout/header"
            app:menu="@menu/nav_drawer" />
    </androidx.drawerlayout.widget.DrawerLayout>

</androidx.constraintlayout.widget.ConstraintLayout>